tests/sksl/errors/OverflowIntLiteral.glsl
### Compilation failed:

error: 4: integer is out of range for type 'int': -2147483649
error: 6: integer is out of range for type 'int': 2147483648
error: 8: integer is out of range for type 'short': -32769
error: 9: integer is out of range for type 'short': 32768
error: 11: integer is out of range for type 'int': 2147483648
error: 12: integer is out of range for type 'short': 32768
6 errors
